--- a/package.json
+++ b/package.json
@@ -3,21 +3,22 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "index.js",
+  "keywords": [],
+  "author": "Alexander Flores",
+  "description": "The best project ever",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint",
     "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.6",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-router": "1.105.0",
-    "localforage": "^1.10.0",
-    "match-sorter": "^6.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "sort-by": "^1.2.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.10",
